# network_programing

./: CMakeLists.txt  README.md
lib/: common.h
simple_client_server/: readn.cpp  test_client.cpp  test_server.cpp
simple_tcp/: CMakeLists.txt  makefile  readn.h
simple_udp/: CMakeLists.txt  udp_client.cpp  udp_server.cpp
